@@ -1,6 +1,7 @@
 2014-01-17  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow-up to #54160: List module broken on root page
+	* Follow-up to #54160: Throw exception when current language is not found in Language repository
 
 2014-01-16  Stanislas Rolland  <typo3@sjbr.ca>
 
